--- a/style.css
+++ b/style.css
@@ -14,8 +14,13 @@ body{
     background-size: cover;
 }
 
+html, body {
+    height: 100%;
+  }
+
+
 .main-section{
-    height: 100vh;
+
 }
 
 .heading{
