--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
 *{
     font-family: 'Poppins', sans-serif;
-    border: 2px sloid black !important;
-    
+    /* border: 2px solid black !important; */
 }
 
 body{
@@ -12,11 +10,15 @@ body{
     background-image: url('./images/bg-intro-desktop.png');
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 html, body {
-    height: 100%;
-  }
+    
+}
 
 
 .main-section{
@@ -97,11 +99,12 @@ html, body {
 footer {
     text-align: center;
     color: #fff;
+    display: flex;
+    align-items: center;
 }
 
 .attribution a {
     color: #fff;
-    
 }
 
 .attribution a:hover{
